--- a/src/pages/Gallery.css
+++ b/src/pages/Gallery.css
@@ -138,3 +138,16 @@ button.active {
 .steel.active { border: 2px solid #B7B7CE; color: #B7B7CE; }
 .fairy.active { border: 2px solid #D685AD; color: #D685AD; }
 
+
+@media (max-width: 500px) {
+    .generation-filter,
+    .type-filter,
+    .legendary-mythical-filter {
+        width: 95%;
+    }
+
+    .gallery-page h1 {
+        margin-top: 60px;
+        margin-bottom: 10px;
+    }
+}
